k8s/backend/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  labels:
    app: backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend

          image: 010741811189.dkr.ecr.us-east-1.amazonaws.com/backend:IMAGE_TAG
          imagePullPolicy: Always

          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
